feat(pathology): dashboard and case view read the bench stages (OGC-264)
With the eleven bench stages in place, the dashboard's count tiles still
named four statuses of the old enum, so a case at ACCESSIONED,
DECALCIFICATION, EMBEDDING, COVERSLIPPING or UNDER_REVIEW was counted on no
tile, while the dashboard's own filter treated everything but COMPLETED as
in progress. The two had never agreed. Both now read one rule:
PathologyStages.inProgress() on the server and its mirror in
pathologyStages.js on the client, which is every stage except
READY_PATHOLOGIST and COMPLETED. That grouping is not spelled out in the
FRS; it follows FR-2.1 row 10, whose point for UNDER_REVIEW is that the
awaiting-review tile counts only what nobody has started, so a case a
pathologist has taken out of the queue stays in progress. It is the
grouping posted on the issue on 2026-09-13. The dashboard filter clause of
AC-4 holds; the rail, badges and action bar it also names are later
slices. The two mirrors are pinned to the same membership through en.json,
but the grouping rule itself is written twice and guarded by one test on
each side.

The Stage column, the status filter and the case view's status select
render the pathology.stage.* labels through one derived message id instead
of the server's English, falling back to the served text for an id the
build does not know. The three hardcoded option texts around them
("Status", "All", "In Progress") now use the existing common.* keys.

Both display items carry hasOpenRequests, derived inside the display
service's transaction from the case's pathology_request rows at OPENED, so a
screen can show the request at the case's real stage (AC-6). Because that
flag is orthogonal to the stage, the tiles are no longer a partition: a
case in the review queue with an open request is counted on both.

A new case now starts at ACCESSIONED rather than GROSSING. The FRS is silent
on the initial value, but FR-2.1 defines ACCESSIONED as received and
triaged, aw