@@ -1,7 +1,5 @@
 package org.openelisglobal.program.util;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.EnumSet;
 import java.util.List;
 import java.util.Objects;
@@ -31,6 +29,17 @@ public final class PathologyStages {
     private static final Set<PathologyStatus> MANDATORY = EnumSet.of(PathologyStatus.ACCESSIONED,
             PathologyStatus.GROSSING, PathologyStatus.READY_PATHOLOGIST, PathologyStatus.COMPLETED);
 
+    /** The two stages at which nobody is working the tissue. */
+    private static final Set<PathologyStatus> OFF_THE_BENCH = EnumSet.of(PathologyStatus.READY_PATHOLOGIST,
+            PathologyStatus.COMPLETED);
+
+    /**
+     * {@link #ordered()} minus {@link #OFF_THE_BENCH}, computed once since neither
+     * one changes at runtime.
+     */
+    private static final List<PathologyStatus> IN_PROGRESS = ordered().stream()
+            .filter(status -> !OFF_THE_BENCH.contains(status)).collect(Collectors.toUnmodifiableList());
+
     private static final String DISPLAY_KEY_PREFIX = "pathology.stage.";
 
     private PathologyStages() {
@@ -40,7 +49,27 @@ public final class PathologyStages {
      * Every stage in bench order, exactly as {@link PathologyStatus} declares them.
      */
     public static List<PathologyStatus> ordered() {
-        return Collections.unmodifiableList(Arrays.asList(PathologyStatus.values()));
+        return List.of(PathologyStatus.values());
+    }
+
+    /**
+     * The stages at which a case counts as work in progress (OGC-264, AC-4).
+     *
+     * <p>
+     * The Pathology Dashboard's "in progress" tile and the dashboard's own stage
+     * filter each spelled out their own list of statuses and the two lists were not
+     * the same, so a case could sit in the filter's results while no tile counted
+     * it. Both now read this one rule.
+     *
+     * <p>
+     * {@code READY_PATHOLOGIST} is excluded because a case there is queued for a
+     * pathologist and is counted on the "awaiting review" tile instead, and
+     * {@code COMPLETED} because the case is finished. {@code UNDER_REVIEW} is
+     * included: a pathologist has taken the case out of that queue and is working
+     * it.
+     */
+    public static List<PathologyStatus> inProgress() {
+        return IN_PROGRESS;
     }
 
     /** True for the four stages a deployment can never switch off (FR-2.3). */
@@ -67,15 +96,15 @@ public final class PathologyStages {
      */
     public static List<PathologyStatus> enabled(Predicate<PathologyStatus> deploymentEnabled) {
         Objects.requireNonNull(deploymentEnabled, "deploymentEnabled");
-        List<PathologyStatus> result = ordered().stream().filter(status -> isEnabled(status, deploymentEnabled))
-                .collect(Collectors.toList());
-        return Collections.unmodifiableList(result);
+        return ordered().stream().filter(status -> isEnabled(status, deploymentEnabled))
+                .collect(Collectors.toUnmodifiableList());
     }
 
     /**
      * The React Intl message id for a stage's label. Derived from the constant name
      * rather than stored on the enum, because the enum has no room for a per-locale
-     * label and the English message bundle is the only place a label may live.
+     * label: the English message bundle holds the label the screen renders, and the
+     * enum's own display string stays the fallback the server keeps serving.
      */
     public static String displayKey(PathologyStatus status) {
         Objects.requireNonNull(status, "status");
